// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component it renders 1`] = `
<button
  className="btn "
/>
`;

exports[`Button Component it renders alt 1`] = `
<button
  className="btn__alt "
/>
`;

exports[`Button Component it renders busy 1`] = `
<button
  className="btn "
>
  <span
    className="loader_wrapper"
    style={Object {}}
  >
    <span
      className="loader_dot"
    />
    <span
      className="loader_dot"
    />
    <span
      className="loader_dot"
    />
  </span>
</button>
`;

exports[`Button Component it renders caution 1`] = `
<button
  className=" btn__caution "
/>
`;

exports[`Button Component it renders children 1`] = `
<button
  className="btn "
>
  Button Children
</button>
`;

exports[`Button Component it renders className 1`] = `
<button
  className="btn test classnames"
/>
`;

exports[`Button Component it renders disabled 1`] = `
<button
  className=" btn__disabled "
  disabled={true}
/>
`;

exports[`Button Component it renders html tagName 1`] = `
<span
  className="btn "
/>
`;

exports[`Button Component it renders link 1`] = `
<button
  className=" btn__link "
/>
`;

exports[`Button Component it renders pimary && secondary 1`] = `
<button
  className="btn__primary"
>
  'primary' and 'secondary' are mutually exclusive.
</button>
`;

exports[`Button Component it renders primary && alt 1`] = `
<button
  className="btn__primary"
>
  'primary' and 'alt' are mutually exclusive.
</button>
`;

exports[`Button Component it renders primary 1`] = `
<button
  className="btn__primary "
/>
`;

exports[`Button Component it renders secondary 1`] = `
<button
  className="btn__secondary "
/>
`;
